<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Email Raffle</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="new_raffle">New Raffle</string>
	<string name="end_raffle">End Raffle</string>
	<string name="start_new_raffle">Start New Raffle</string>
	<string name="view_entries">View Entries</string>
	<string name="raffle_name">Raffle Name</string>
	<string name="email_address">Email Address</string>
	<string name="first_name">First Name</string>
	<string name="last_name">Last Name</string>
	<string name="number_entries">Number of Entries</string>
	<string name="submit">Submit</string>
	<string name="random_text">Random Text</string>
	<string name="get_winner">GET THE WINNER</string>
	<string name="the_winner">And the winner is&#8230;</string>
	<string name="export_csv">Export to CSV</string>
	<string name="already_raffle">You have an existing raffle with this name. Do you want to continue using this raffle or create a new raffle?</string>
	<string name="continue_raffle">Continue Raffle</string>
	<string name="new_name">New Name</string>
</resources>
