<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_raffle" />

    <TextView
        android:id="@+id/RaffleDisplayNameWidget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/calculate_raffle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="55dp"
        android:onClick="calculateRaffle"
        android:padding="20dp"
        android:text="@string/get_winner"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/timerclock"
        android:layout_width="148dp"
        android:layout_height="138dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:src="@drawable/clock"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/thewinneris"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/the_winner"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/winningEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="winning email"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#005A31"
        android:textStyle="bold"
        android:visibility="invisible"  />

    <Button
        android:id="@+id/export_csv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/export_csv"
        android:textStyle="bold" 
        android:visibility="invisible" 
        android:onClick="exportCSV" />

</LinearLayout>